fix: baselist extra wrong position

--- a/src/components/BaseList/index.less
+++ b/src/components/BaseList/index.less
@@ -47,7 +47,8 @@
 }
 
 @media only screen and (min-width: @breakpoint-lg), print {
-  .extra + .itemTitle {
+  // .itemTitle {
+  .titleWithExtra {
     float: left;
     max-width: 75%;
   }
