--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -100,6 +100,9 @@
     body {
       background: @body-bg-color;
     }
+    .qrcode {
+      display: block;
+    }
   }
 
   .resumeWrapper {
